@@ -5,4 +5,5 @@ Contributors (from the git history):
   Squeeks <privacymyass@gmail.com>
   Artem Krivopolenov <akrivopolenov@gmail.com>
   Fernando Vezzosi <buccia@repnz.net>
+  ryoi432 (UTF-8 fix)
 
